fix(CL-595): creating a gap between beta tag and text when translated to rtl language

--- a/src/web/CareLeavers.Web.Node/scss/partials/_phase-banner.scss
+++ b/src/web/CareLeavers.Web.Node/scss/partials/_phase-banner.scss
@@ -1,47 +1,36 @@
 .govuk-phase-banner {
   border-bottom: none;
-  position: relative; // Required anchor for absolute layout
 }
 
 .govuk-phase-banner__content {
   display: flex;
   align-items: center;
-  gap: 12px; // Creates space between Beta tag, text, and link naturally with no margins
-  padding-right: 120px; 
-  padding-left: 0;
-
+  flex-wrap: wrap;
+  
+  
   [dir="rtl"] & {
-    padding-right: 0;
-    padding-left: 120px; // Leaves space for the translate button on far left
+     margin-right: auto;
+     margin-left: 0;
   }
 }
 
 .translate {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  right: 0;
-  left: auto;
+  display: block;
+  margin-left: auto;
+  text-align: right;
+  min-width: 90px;
+  float: right;
+  font-size: 1em;
 
-  // Move button all the way to the far left in RTL
-  [dir="rtl"] & {
-    right: auto;
-    left: 0;
+   [dir="rtl"] & {
+     margin-right: auto;
+     margin-left: 0;
   }
+}
 
   .govuk-link {
-    display: flex;
-    align-items: center;
     background-image: url("/assets/icon-translate.png");
     background-repeat: no-repeat;
     background-size: contain;
-    background-position: left center;
     padding-left: 32px;
-
-    [dir="rtl"] & {
-      background-position: right center;
-      padding-left: 0;
-      padding-right: 32px;
-    }
   }
-}
